containers/leaderboard-api.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: leaderboard-api
  labels:
    app: leaderboard-api
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  type: ClusterIP
  selector:
    app: leaderboard-api
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: leaderboard-api-deployment
  labels:
    app: leaderboard-api
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: leaderboard-api
    spec:
      containers:
        - image: anthonyamanse/leaderboard:latest
          imagePullPolicy: Always
          name: leaderboard-api
          ports:
            - containerPort: 8080
