containers/mobile-assets.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mobile-assets
  labels:
    app: mobile-assets
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  type: ClusterIP
  selector:
    app: mobile-assets
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mobile-assets-deployment
  labels:
    app: mobile-assets
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mobile-assets
    spec:
      containers:
        - image: anthonyamanse/mobile-assets:latest
          imagePullPolicy: Always
          name: mobile-assets
          ports:
            - containerPort: 8080
