containers/registeree-api.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: registeree-api
  labels:
    app: registeree-api
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  type: ClusterIP
  selector:
    app: registeree-api
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: registeree-api-deployment
  labels:
    app: registeree-api
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: registeree-api
    spec:
      containers:
        - image: anthonyamanse/registeree-api:latest
          imagePullPolicy: Always
          name: registeree-api
          ports:
            - containerPort: 8080
